// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Full Coverage for validate/array Form Validation: Required Array not Set 1`] = `
Array [
  Object {
    "type": 4,
  },
]
`;

exports[`Full Coverage for validate/array Form Validation: array too long 1`] = `
Array [
  Object {
    "type": 420,
  },
]
`;

exports[`Full Coverage for validate/array Form Validation: array too short 1`] = `
Array [
  Object {
    "type": 5,
  },
]
`;

exports[`Full Coverage for validate/array Form Validation: array with length constraint ok 1`] = `
Array [
  "my",
  "strings",
]
`;

exports[`Full Coverage for validate/array Form Validation: successffullay validated stringarray 1`] = `
Array [
  "my",
  "strings",
]
`;
